Minor rewriting of the introduction.

--- a/report.tex
+++ b/report.tex
@@ -62,10 +62,9 @@ Computational Logic group.
 \pagebreak
 
 \section*{Introduction}
-In the field of decision problems, linear arithmetic consists deciding whether
-a set of linear constraints can be satisfied simultaneously
-\cite[Section 5]{Decision2016}. Algorithms to
-solve linear decision problems have been proposed \cite{Dutertre2006},
+In the field of decision problems, the theory of linear arithmetic is
+composed by linear inequialities. Algorithms to solve linear arithmetic
+problems over rationals have been proposed \cite{Dutertre2006},
 and formalized in Isabelle, a proof assistant, in order to have a verified
 implementation \cite{Spasic2012, BHT2019, Thiemann2018}. When some variables of
 the problem are required to be integral, we talk about integer or mixed-integer
